Add form structure with formik

--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "start": "webpack-dev-server --hot --mode development"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-formik-ui": "^4.1.2",
     "react-hot-loader": "^4.12.21",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
