--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "start": "webpack-dev-server --hot --mode development"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@material-ui/core": "^4.10.2",
     "formik": "^2.1.4",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-formik-ui": "^4.1.2",
