--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
+    "react-scroll-up-button": "^1.6.4",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
