One more test reg github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nebojsab.github.io/demo-app/",
+  "homepage": "https://nebojsab.github.io/",
   "name": "salestrakker-app",
   "version": "1.0.0",
   "description": "",
