--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nebojsab.github.io/",
+  "homepage": "https://nebojsab.github.io/demo-app/",
   "name": "salestrakker-app",
   "version": "1.0.0",
   "description": "",
@@ -13,13 +13,14 @@
     "build-prod": "webpack -p --mode production",
     "start": "webpack-dev-server --hot --mode development",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@material-ui/core": "^4.10.2",
     "formik": "^2.1.4",
     "gh-pages": "^3.1.0",
+    "global": "^4.4.0",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
